fix: Downgrade to Spring Boot 2.7.18 + Java 11 for lab environment compatibility